Use url not baseurl

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -7,10 +7,10 @@ layout: default
         <h1>{{ page.title }}</h1>
 
         <!--https://stackoverflow.com/questions/291813/recommended-way-to-embed-pdf-in-html-->
-        <object class="pdf-embed" data="{{ site.baseurl }}/resume/CoffeyBrandon_Resume.pdf" type="application/pdf">
-            <embed src="{{ site.baseurl }}/resume/CoffeyBrandon_Resume.pdf" type="application/pdf">
+        <object class="pdf-embed" data="{{ site.url }}/resume/CoffeyBrandon_Resume.pdf" type="application/pdf">
+            <embed src="{{ site.url }}/resume/CoffeyBrandon_Resume.pdf" type="application/pdf">
                 <p>This browser does not support PDFs.</p>
-                <p><a href="{{ site.baseurl }}/resume/CoffeyBrandon_Resume.pdf">Please download the PDF to view it</a>.</p>
+                <p><a href="{{ site.url }}/resume/CoffeyBrandon_Resume.pdf">Please download the PDF to view it</a>.</p>
             </embed>
         </object>
       
