--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,23 +5,23 @@
 
     {% include meta.html %}
 
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.url }}/style.css" />
   </head>
 
   <body>
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <!--<a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>-->
+          <!--<a href="{{ site.url }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>-->
 
           <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+            <h1 class="site-name"><a href="{{ site.url }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Portfolio</a>
-            <a href="{{ site.baseurl }}/resume">Resume</a>
+            <a href="{{ site.url }}/">Portfolio</a>
+            <a href="{{ site.url }}/resume">Resume</a>
           </nav>
         </header>
       </div>
