--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }}</title>
+    <title>{% if page.title %}{{ page.title }}{% else %}Portfolio{% endif %} - Brandon Coffey</title>
 
     {% include meta.html %}
 
@@ -15,8 +15,8 @@
           <!--<a href="{{ site.url }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>-->
 
           <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.url }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
+            <h1 class="site-name"><a href="{{ site.url }}/">Brandon Coffey</a></h1>
+            <p class="site-description">Programming and Technical Artist</p>
           </div>
 
           <nav>
