Updates and Fixes and add links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
             <p class="site-description">Programming and Technical Artist</p>
           </div>
 
-          <nav>
+          <nav style="font-size: 26px">
             <a href="{{ site.url }}/">Portfolio</a>
             <a href="{{ site.url }}/resume">Resume</a>
           </nav>
