--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -7,11 +7,11 @@ layout: default
         <h1>{{ page.title }}</h1>
 
         <!--https://stackoverflow.com/questions/291813/recommended-way-to-embed-pdf-in-html-->
+        <p><a href="{{ site.url }}/resume/CoffeyBrandon_Resume.pdf" target="_blank">View or Download Resume PDF</a>.</p>
         <object class="pdf-embed" data="{{ site.url }}/resume/CoffeyBrandon_Resume.pdf" type="application/pdf">
-            <embed src="{{ site.url }}/resume/CoffeyBrandon_Resume.pdf" type="application/pdf">
-                <p>This browser does not support PDFs.</p>
-                <p><a href="{{ site.url }}/resume/CoffeyBrandon_Resume.pdf">Please download the PDF to view it</a>.</p>
-            </embed>
+            <a href="{{ site.url }}/resume/CoffeyBrandon_Resume.pdf" target="_blank">
+                <img style="width: 100%; max-width: 800px;" src="{{ site.url }}/resume/CoffeyBrandon_Resume.jpg" alt="Resume PDF" />
+            </a>
         </object>
       
         <div class="entry">
