--- a/style.scss
+++ b/style.scss
@@ -348,6 +348,22 @@ nav {
   margin: 0;
 }
 
+.half, .half-l, .half-r {
+  width: 49.5%;
+  margin: 0;
+  
+  @include mobile {
+    width: 100%;
+  }
+  @include mobile-large {
+    width: 100%;
+  }
+}
+
+.half-r {
+  float: right;
+}
+
 .gap01 {
   margin: 1em 0 0 0;
 }
