--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{% if page.title %}{{ page.title }}{% else %}Portfolio{% endif %} - Brandon Coffey</title>
 
-    {% include meta.html %}
+<head>
+  <title>{% if page.title %}{{ page.title }}{% else %}Portfolio{% endif %} - Brandon Coffey</title>
 
-    <link rel="stylesheet" type="text/css" href="{{ site.url }}/style.css" />
-  </head>
+  {% include meta.html %}
 
-  <body>
-    <div class="wrapper-masthead">
-      <div class="container">
-        <header class="masthead clearfix">
-          <!--<a href="{{ site.url }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>-->
+  <link rel="stylesheet" type="text/css" href="{{ site.url }}/style.css" />
+  <link rel="icon" href="website-icon.png">
+</head>
 
-          <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.url }}/">Brandon Coffey</a></h1>
-            <p class="site-description">Programming and Technical Artist</p>
-          </div>
+<body>
+  <div class="wrapper-masthead">
+    <div class="container">
+      <header class="masthead clearfix">
+        <!--<a href="{{ site.url }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>-->
 
-          <nav style="font-size: 26px">
-            <a href="{{ site.url }}/">Portfolio</a>
-            <a href="{{ site.url }}/resume">Resume</a>
-          </nav>
-        </header>
-      </div>
+        <div class="site-info">
+          <h1 class="site-name"><a href="{{ site.url }}/">Brandon Coffey</a></h1>
+          <p class="site-description">Programming and Technical Artist</p>
+        </div>
+
+        <nav style="font-size: 26px">
+          <a href="{{ site.url }}/">Portfolio</a>
+          <a href="{{ site.url }}/resume">Resume</a>
+        </nav>
+      </header>
     </div>
+  </div>
 
-    <div id="main" role="main" class="container">
-      {{ content }}
-    </div>
+  <div id="main" role="main" class="container">
+    {{ content }}
+  </div>
 
-    <div class="wrapper-footer">
-      <div class="container">
-        <footer class="footer">
-          {% include svg-icons.html %}
-        </footer>
-      </div>
+  <div class="wrapper-footer">
+    <div class="container">
+      <footer class="footer">
+        {% include svg-icons.html %}
+      </footer>
     </div>
-    {% include analytics.html %}
-  </body>
+  </div>
+  {% include analytics.html %}
+</body>
+
 </html>
