--- a/_layouts/capstone.html
+++ b/_layouts/capstone.html
@@ -7,6 +7,7 @@
   {% include meta.html %}
 
   <link rel="stylesheet" type="text/css" href="{{ site.url }}/style.css" />
+  <link rel="icon" href="website-icon.png">
 </head>
 
 <body>
