--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,9 +3,13 @@ layout: default
 ---
 
 <article class="page">
-  <h1>{{ page.title }}</h1>
+  <div class="project-content">
+    <h1>{{ page.title }}</h1>
 
-  <div class="entry">
-    {{ content }}
+    <div class="entry">
+      {{ content }}
+    </div>
   </div>
+  <br>
+  <br>
 </article>
