--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>{% if page.title %}{{ page.title }}{% else %}Portfolio{% endif %} - Brandon Coffey</title>
+  <title>{{ page.title }} - Brandon Coffey</title>
 
   {% include meta.html %}
 
@@ -40,7 +40,6 @@
       </footer>
     </div>
   </div>
-  {% include analytics.html %}
 </body>
 
 </html>
