--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -3,8 +3,20 @@
 <meta http-equiv='X-UA-Compatible' content='IE=edge'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
 
+<meta author="{{ site.author }}" />
+
+{% if page.title %}
 <meta property="og:title" content="{{ page.title }}" />
 <meta property="twitter:title" content="{{ page.title }}" />
-<meta name="author" content="{{ site.name }}" />
+{% else %}
+<meta property="og:title" content="{{ site.title }}" />
+<meta property="twitter:title" content="{{ site.title }}" />
+{% endif %}
+
+{% if page.description %}
+<meta name="description" content="{{ page.description }}">
+<meta property="og:description" content="{{ page.description }}" />
+{% else %}
 <meta name="description" content="{{ site.description }}">
 <meta property="og:description" content="{{ site.description }}" />
+{% endif %}
