--- a/style.scss
+++ b/style.scss
@@ -1,405 +1,13 @@
 ---
 ---
 
-@import "reset";
-@import "variables";
-// Syntax highlighting @import is at the bottom of this file
-
-/* LIGHT DARK */
-
-:root {
-  --body-bg: #222;
-  --body-color-dark: #fff;
-  --body-color: #eee;
-  --body-color-light: #ccc;
-  --body-color-lighter: #aaa;
-  --body-link-color: #55aaff;
-  --body-link-color-dark: #99ccff;
-  --card-bg: #333;
-  --card-bg-dark: #555;
- }
- @media (prefers-color-scheme: dark) {
-  :root {
-  --body-bg: #222;
-  --body-color-dark: #fff;
-  --body-color: #eee;
-  --body-color-light: #ccc;
-  --body-color-lighter: #aaa;
-  --body-link-color: #55aaff;
-  --body-link-color-dark: #99ccff;
-  --card-bg: #333;
-  --card-bg-dark: #555;
-  }
-}
-
-/* BASE RULES */
-
-html {
-  font-size: 100%;
-}
-
-body {
-	background-color: var(--body-bg);
-  color: var(--body-color-light) !important;
-  font: 18px/1.4 $helvetica;
-}
-
-.container, .container {
-  margin: 0 auto;
-  max-width: 96rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
-  width: 100%;
-
-  @include mobile-large {
-    max-width: 64rem;
-  }
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
-  color: var(--body-color);
-  font-weight: bold;
-
-  line-height: 1.7;
-  margin: 0.25em 0 5px 0;
-  padding: 0;
-
-  @include mobile {
-    line-height: 1.4;
-  }
-}
-
-h1 {
-  font-size: 30px;
-  a {
-    color: inherit;
-  }
-}
-
-h2 {
-  font-size: 24px;
-}
-
-h3 {
-  font-size: 22px;
-  margin: 0;
-}
-
-h4 {
-  font-size: 18px;
-  margin: 0;
-  font-weight: normal;
-  color: var(--body-color-lighter);
-}
-
-p {
-  margin: 5px 0;
-}
-
-a {
-  color: var(--body-link-color);
-  text-decoration: none;
-	cursor: pointer;
-  &:hover, &:active {
-    color: var(--body-link-color-dark);
-  }
-}
-
-ul, ol {
-  margin: 15px 0;
-  padding-left: 30px;
-}
-
-ul {
-  list-style-type: disc;
-}
-
-ol {
-  list-style-type: decimal;
-}
-
-ol ul, ul ol, ul ul, ol ol {
-  margin: 0;
-}
-
-ul ul, ol ul {
-  list-style-type: circle;
-}
-
-em, i {
-  font-style: italic;
-}
-
-strong, b {
-  font-weight: bold;
-}
-
-img {
-  max-width: 100%;
-}
-
-// Fixes images in popup boxes from Google Translate
-.gmnoprint img {
-  max-width: none;
-}
-
-.date {
-  font-style: italic;
-  color: var(--body-color-lighter);
-}
-
-::-moz-selection {
-  color: var(--body-color-dark);
-  background: var(--card-bg-dark);
-}
-::selection {
-  color: var(--body-color-dark);
-  background: var(--card-bg-dark);
-}
-
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-/* LAYOUT / SECTIONS */
-
-.wrapper-masthead {
-  margin-bottom: 25px;
-  border-bottom: 1px solid var(--card-bg);
-}
-
-.masthead {
-  padding: 20px 0;
-  max-width: 1000px;
-  margin: 0 auto;
-
-  @include mobile {
-    text-align: center;
-  }
-}
-
-.site-avatar {
-  float: left;
-  width: 70px;
-  height: 70px;
-  margin-right: 15px;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-
-  img {
-    border-radius: 5px;
-  }
-}
-
-.site-info {
-  float: left;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-}
-
-.site-name {
-  margin: 0;
-  color: var(--body-color-light);
-  cursor: pointer;
-  font-family: $helveticaNeue;
-  font-weight: 300;
-  font-size: 28px;
-  letter-spacing: 1px;
-}
-
-.site-description {
-  margin: -5px 0 0 0;
-  color: var(--body-color-lighter);
-  font-size: 16px;
-
-  @include mobile {
-    margin: 3px 0;
-  }
-}
-
-nav {
-  float: right;
-  margin-top: 23px;
-  font-family: $helveticaNeue;
-  font-size: 18px;
-
-  @include mobile {
-    float: none;
-    margin-top: 9px;
-    display: block;
-    font-size: 16px;
-  }
-
-  a {
-    margin-left: 20px;
-    color: var(--body-color-light);
-    text-align: right;
-    font-weight: 300;
-    letter-spacing: 1px;
-
-    @include mobile {
-      margin: 0 10px;
-      color: var(--body-link-color);
-    }
-  }
-}
-
-.navbar-toggler {
-  @extend .navbar-toggler;
-  color: var(--text-color);
-  border-color: var(--text-color);
-}
-
-.navbar-toggler-icon {
-  @extend .navbar-toggler-icon;
-  background-image: escape-svg(url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='#000000' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>"));
-}
-
-/* MAIN */
-
-.project-grid {
-  display: grid;
-  row-gap: 3rem;
-  column-gap: 2rem;
-  grid-template-rows: repeat(2,minmax(0,1fr));
-  grid-template-columns: repeat(3,minmax(0,1fr));
-  margin-left: auto;
-  margin-right: auto;
-
-  align-content: center;
-  text-align: center;
-
-  @include mobile {
-    grid-template-columns: repeat(1,minmax(0,1fr));
-    row-gap: 2rem;
-  }
-  @include mobile-large {
-    grid-template-columns: repeat(2,minmax(0,1fr));
-  }
-}
-
-.project-grid-container {
-  box-sizing: border-box;
-  display: block;
-  border: 1px solid var(--card-bg-dark);
-  border-radius: 0.375rem;
-  color: var(--body-color-light);
-
-  grid-row: span 2/span 2;
-  padding: 1rem;
-}
-
-.project-grid-container:hover {
-  color: var(--body-color-dark);
-  box-shadow: 0 0 10px var(--card-bg);
-}
-
-.project-grid-image {
-  border-radius: 0.375rem;
-  overflow: clip;
-  overflow-clip-margin: content-box;
-}
-
-.project-grid-title {
-  font-weight: bold;
-  font-size: 30px;
-  margin: 0;
-}
-
-.project-grid-container:hover > .project-grid-title {
-  text-decoration: underline;
-}
-
-.project-grid-text {
-  font-size: 16px;
-  margin: 0 1rem 0 1rem;
-}
-
-.project-grid-year {
-  font-weight: bold;
-  font-size: 16px;
-  margin: 0.25em 1rem 0 1rem;
-}
-
-.project-content {
-  display: block;
-  margin: 0 auto;
-  max-width: 1000px;
-}
-
-.full {
-  width: 100%;
-  margin: 0;
-}
-
-.half, .half-l, .half-r {
-  width: 49.5%;
-  margin: 0;
-  
-  @include mobile {
-    width: 100%;
-  }
-  @include mobile-large {
-    width: 100%;
-  }
-}
-
-.half-r {
-  float: right;
-}
-
-.gap01 {
-  margin: 1em 0 0 0;
-}
-
-.gap02 {
-  margin: 2em 0 0 0;
-}
-
-.gap03 {
-  margin: 3em 0 0 0;
-}
-
-.aspect16-9 {
-  aspect-ratio: 16 / 9; 
-}
-
-.pdf-embed {
-  width:100%;
-  max-width: 900px;
-  height:1160px;
-
-  @include mobile {
-    height:700px;
-  }
-}
-
-.wrapper-footer {
-  margin-top: 50px;
-  border-top: 1px solid var(--card-bg-dark);
-  border-bottom: 1px solid var(--card-bg-dark);
-  background-color: var(--card-bg);
-}
-
-footer {
-  padding: 20px 0;
-  text-align: center;
-}
-
-@import "highlights";
-@import "svg-icons";
+@import "helper/reset";
+@import "helper/variables";
+
+@import "base";
+@import "default";
+@import "portfolio";
+@import "sizing";
+
+@import "helper/code-highlights";
+@import "helper/svg-icons";
