--- a/_layouts/portfolio-page.html
+++ b/_layouts/portfolio-page.html
@@ -3,7 +3,7 @@ layout: portfolio-default
 ---
 
 <article class="page">
-  <div class="project-content">
+  <div class="portfolio-content">
     <h1>{{ page.title }}</h1>
 
     <div class="entry">
