--- a/_sass/portfolio.scss
+++ b/_sass/portfolio.scss
@@ -1,4 +1,4 @@
-.project-grid {
+.portfolio-grid {
     display: grid;
     row-gap: 3rem;
     column-gap: 2rem;
@@ -19,7 +19,7 @@
     }
 }
 
-.project-grid-container {
+.portfolio-grid-container {
     box-sizing: border-box;
     display: block;
     border: 1px solid var(--card-bg-dark);
@@ -30,39 +30,39 @@
     padding: 1rem;
 }
 
-.project-grid-container:hover {
+.portfolio-grid-container:hover {
     color: var(--body-color-dark);
     box-shadow: 0 0 10px var(--card-bg);
 }
 
-.project-grid-image {
+.portfolio-grid-image {
     border-radius: 0.375rem;
     overflow: clip;
     overflow-clip-margin: content-box;
 }
 
-.project-grid-title {
+.portfolio-grid-title {
     font-weight: bold;
     font-size: 30px;
     margin: 0;
 }
 
-.project-grid-container:hover > .project-grid-title {
+.portfolio-grid-container:hover > .portfolio-grid-title {
     text-decoration: underline;
 }
 
-.project-grid-text {
+.portfolio-grid-text {
     font-size: 16px;
     margin: 0 1rem 0 1rem;
 }
 
-.project-grid-year {
+.portfolio-grid-year {
     font-weight: bold;
     font-size: 16px;
     margin: 0.25em 1rem 0 1rem;
 }
 
-.project-content {
+.portfolio-content {
     display: block;
     margin: 0 auto;
     max-width: 1000px;
