--- a/_layouts/portfolio-default.html
+++ b/_layouts/portfolio-default.html
@@ -10,8 +10,9 @@ layout: default
         </div>
 
         <nav style="font-size: 26px">
-            <a href="{{ site.url }}/">Portfolio</a>
-            <a href="{{ site.url }}/resume">Resume</a>
+            <a href="{{ site.url }}/">Home</a>
+            <a href="{{ site.url }}/projects/">Portfolio</a>
+            <a href="{{ site.url }}/resume/">Resume</a>
         </nav>
     </header>
 </div>
