--- a/_sass/portfolio.scss
+++ b/_sass/portfolio.scss
@@ -2,7 +2,7 @@
     display: grid;
     row-gap: 3rem;
     column-gap: 2rem;
-    grid-template-rows: repeat(2,minmax(0,1fr));
+    grid-template-rows: repeat(1,minmax(0,1fr));
     grid-template-columns: repeat(3,minmax(0,1fr));
     margin-left: auto;
     margin-right: auto;
@@ -66,4 +66,19 @@
     display: block;
     margin: 0 auto;
     max-width: 1000px;
+}
+
+.filter-button, .filter-button-selected {
+    background-color: var(--card-bg-dark);
+    color: var(--body-color-light);
+    border: none;
+    display: inline-block;
+    padding: 4px 12px 4px 12px;
+    vertical-align: middle;
+    overflow: hidden;
+    text-decoration: none;
+}
+
+.filter-button-selected {
+    background-color: var(--card-bg);
 }
