--- a/_sass/helper/code-highlights.scss
+++ b/_sass/helper/code-highlights.scss
@@ -8,6 +8,13 @@
   box-shadow: 3px 3px rgba(0,0,0,0.1);
   margin: 20px 0 20px 0;
   font-size: 16px;
+
+  @include mobile-large {
+    font-size: 14px;
+  }
+  @include mobile {
+    font-size: 11px;
+  }
 }
 
 code {
