--- a/_sass/sizing.scss
+++ b/_sass/sizing.scss
@@ -36,6 +36,7 @@
 }
 
 .pdf-embed {
+    background-color: white;
     width:100%;
     max-width: 900px;
     height:1160px;
@@ -46,6 +47,7 @@
 }
 
 .pdf-embed-short {
+    background-color: white;
     width:100%;
     height:800px;
 
