--- a/_layouts/portfolio-default.html
+++ b/_layouts/portfolio-default.html
@@ -6,7 +6,7 @@ layout: default
     <header class="masthead clearfix">
         <div class="site-info">
             <h1 class="site-name"><a href="{{ site.url }}/">Brandon Coffey</a></h1>
-            <p class="site-description">Programming and Technical Artist</p>
+            <p class="site-description">Programmer and Technical Artist</p>
         </div>
 
         <nav style="font-size: 26px">
