--- a/_layouts/portfolio-page.html
+++ b/_layouts/portfolio-page.html
@@ -4,6 +4,14 @@ layout: portfolio-default
 
 <article class="page">
   <div class="portfolio-content">
+    <div class="portfolio-icons-container">
+      {% for tag in page.tags %}
+      <img class="portfolio-icon" src="{{site.url}}/content/icons/{{tag}}.png">
+      {% endfor %}
+    </div>
+    <h1>{{page.title}}</h1>
+    <br>
+
     <div class="entry">
       {{ content }}
     </div>
