--- a/_sass/portfolio.scss
+++ b/_sass/portfolio.scss
@@ -1,3 +1,24 @@
+.portfolio-home-image {
+    width: 33.33%;
+    margin-left: 2em;
+    margin-right: 1em;
+    display: inline-block;
+    vertical-align: middle;
+    border-radius: 0.2rem;
+}
+
+.portfolio-home-text {
+    font-size:20px;
+    text-align: justify;
+    width:62%;
+    display:inline-block;
+    vertical-align:middle;
+
+    @include mobile {
+        font-size:18px;
+    }
+}
+
 .portfolio-grid {
     display: grid;
     row-gap: 3rem;
@@ -32,7 +53,7 @@
 
 .portfolio-grid-container:hover {
     color: var(--body-color-dark);
-    box-shadow: 0 0 10px var(--card-bg);
+    box-shadow: 0 0 20px var(--card-bg);
 }
 
 .portfolio-grid-image {
