--- a/_layouts/portfolio-home.html
+++ b/_layouts/portfolio-home.html
@@ -4,7 +4,7 @@ layout: portfolio-gallery
 
 <br>
 
-<img class="portfolio-home-image" src="{{site.url}}/content/profile-picture.png/">
+<img class="portfolio-home-image" src="{{site.url}}/content/profile-picture.png">
 <div class="portfolio-home-text">
     {{ content }}
 </div>
